# papi

./: .pylintrc  README.md  pyproject.toml
docs/: index.html
docs/assets/: global.css  highlight.css
docs/compile/: index.html
docs/compile/documentation/: index.html
docs/nodes/: index.html
docs/nodes/file_objects/: index.html
docs/nodes/file_system/: index.html
docs/parse/: index.html
padi/: __main__.py  parse.py
padi/compile/: __init__.py
padi/compile/documentation/: __init__.py  module.phml
padi/compile/documentation/assets/: global.css
padi/compile/documentation/components/: Assign.phml  Class.phml  Content.phml  FileContent.phml  Footer.phml  Header.phml  Markdown.phml  Method.phml  Nav.phml
padi/compile/documentation/components/File/: Content.phml  Nav.phml  Objects.phml
padi/compile/documentation/components/Nav/: FileNav.phml
padi/compile/documentation/components/Symbol/: Class.phml  Method.phml  Variable.phml
padi/nodes/: __init__.py  file_objects.py  file_system.py
playground/example/docs/: index.html
playground/example/docs/assets/: global.css  highlight.css
playground/example/docs/core/: index.html
playground/example/docs/parsing/: index.html
playground/example/docs/parsing/decor/: index.html
playground/example/docs/parsing/formats/: index.html
playground/example/docs/parsing/parser/: index.html
playground/example/sample_module/: __init__.py  core.py
playground/example/sample_module/parsing/: __init__.py  decor.py  formats.py  parser.py
python_api_documenter/: __main__.py  parse.py
python_api_documenter/nodes/: __init__.py  documentation.py  file_system.py
